deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello
  name: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
      - image: quay.io/nlembers/hello:v1
        imagePullPolicy: Always
        name: hello
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
      securityContext:
        privileged: false
        allowPrivilegeEscalation: false
        runAsNonRoot: true
        capabilities:
          drop: ["ALL"]
        seccompProfile:
          type: RuntimeDefault

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello
  name: hello
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: hello
